--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "irc",
-  "description": "An IRC client library for node",
+  "name": "irc-slk",
+  "description": "An IRC client library for node. Fork to work with rarely irc servers",
   "version": "0.5.2",
-  "author": "Martyn Smith <martyn@dollyfish.net.nz>",
+  "author": "J.A. Nache, <nache@develat.io>, Martyn Smith <martyn@dollyfish.net.nz>",
   "scripts": {
     "test": "./node_modules/faucet/bin/cmd.js test/test-*.js",
     "lint": "./node_modules/jscs/bin/jscs --preset=airbnb */*.js"
@@ -19,11 +19,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/martynsmith/node-irc"
+    "url": "http://github.com/nache/node-irc"
   },
   "bugs": {
-    "mail": "martyn@dollyfish.net.nz",
-    "url": "http://github.com/martynsmith/node-irc/issues"
+    "mail": "nache@develat.io",
+    "url": "http://github.com/nache/node-irc/issues"
   },
   "main": "lib/irc",
   "engines": {
